# glean-mcp-server

./: .env  .gitignore  README.md  glean_server.py  pyproject.toml
